[gd_scene load_steps=11 format=3 uid="uid://cvtuhiyhu8tu8"]

[ext_resource type="Texture2D" uid="uid://bu4bexwdomq4f" path="res://Art/Character/Attack/Further Attack/FarAttack2.png" id="1_yssih"]
[ext_resource type="Texture2D" uid="uid://bo1g6tfmkqqux" path="res://Art/Character/Attack/Further Attack/FarAttack3.png" id="2_r1wt8"]
[ext_resource type="Texture2D" uid="uid://cry3y1ihnq3w" path="res://Art/Character/Attack/Further Attack/FarAttack4.png" id="3_2jbhy"]
[ext_resource type="Texture2D" uid="uid://dc6t4awrbgxm4" path="res://Art/Character/Attack/Further Attack/FarAttack5.png" id="4_fj3aj"]
[ext_resource type="Texture2D" uid="uid://dxpbvda0lmxf5" path="res://Art/Character/Attack/Further Attack/FarAttack6.png" id="5_c2tdh"]
[ext_resource type="Texture2D" uid="uid://d3rjkusf8x7rv" path="res://Art/Character/Attack/Further Attack/FarAttack7.png" id="6_fyyx2"]
[ext_resource type="Texture2D" uid="uid://yo7mln30ycjv" path="res://Art/Character/Attack/Further Attack/FarAttack1.png" id="7_h585n"]
[ext_resource type="Script" path="res://further_attack.gd" id="8_cuale"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0l7ki"]
animations = [{
"frames": [{
"duration": 0.8,
"texture": ExtResource("1_yssih")
}, {
"duration": 0.4,
"texture": ExtResource("2_r1wt8")
}, {
"duration": 0.2,
"texture": ExtResource("3_2jbhy")
}, {
"duration": 0.1,
"texture": ExtResource("4_fj3aj")
}, {
"duration": 0.8,
"texture": ExtResource("5_c2tdh")
}, {
"duration": 0.8,
"texture": ExtResource("6_fyyx2")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_h585n")
}],
"loop": true,
"name": &"Blank",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_06wi0"]
radius = 34.5123
height = 97.5865

[node name="Attack" type="AnimatedSprite2D"]
texture_filter = 1
position = Vector2(-3, 49)
scale = Vector2(1.68056, 1.68056)
sprite_frames = SubResource("SpriteFrames_0l7ki")
animation = &"Blank"
script = ExtResource("8_cuale")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2.38016, -23.2066)
rotation = 1.5708
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.16533, -1.39435e-05)
shape = SubResource("CapsuleShape2D_06wi0")

[connection signal="animation_finished" from="." to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
